# 12-projects-python-streamlit

./: Makefile  README.md  ToDo.md  pyproject.toml
classification_iris/: app.py
dna_count/: app.py
eda_basketball/: app.py
simple-stock-price/: app.py
