[tool.poetry]
name = "12-apps"
version = "0.1.0"
description = ""
authors = ["Faiz M Khan <ghost0x07@gmail.com>"]
readme = "README.md"
packages = [{include = "12_apps"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
yfinance = "^0.2.12"
altair = "^4.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
